# SysVar

./: .coveragerc  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  classes_sysvar.dot  environment.yaml  pyproject.toml  setup.cfg  setup.py
configs/sysvar_101/: 1D_correction.yaml  1D_csv_correction.csv  BF_101.yaml  PID_101.yaml  charged_slow_pi.yaml  study_setup.yaml  study_setup_101.yaml
docs/: authors.rst  changelog.rst  conf.py  contributing.rst  corrections.rst  index.rst  information_for_analysts.rst  input_to_pyhf_cabinetry.rst  installation.rst  requirements.txt  usage.rst
docs/_static/: custom.css
docs/notebooks/: correction_playground.ipynb  cov_custom.npy  sysvar_101.ipynb  visualization_api.ipynb
examples/: example.py  minimal_example.ipynb
src/sysvar/: __init__.py  api.py  channel_template_handler.py  corrections.py  covariance_calculator.py  eigendecomposer.py  fit_setup.py  flycheck_eigendecomposer.py  flycheck_ff_models.py  flycheck_ff_reweighting.py  flycheck_templates.py  flycheck_variations.py  flycheck_visualize.py  saver.py  skeleton.py  templates.py  uncertainties.py  utils.py  variations.py  visualize.py
tests/: conftest.py  run_test.sh  run_tests.sh  test_api.py  test_correction_types.py  test_corrections.py  test_csv_input_file_structure.py  test_skeleton.py  test_uncertainties.py  test_utils.py  test_variator.py
