[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "SysVar"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
description = "A tool for consistent treatment of systematics uncertainties."
authors = [{name = "Ilias Tsaklidis", email = "itsaklid@uni-bonn.de"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "numpy",
    "scipy",
    "pandas",
    "tqdm",
    "matplotlib",
    "seaborn",
    "uncertainties",
    "particle",
    "PyYAML",
    "uproot",
    "scikit-learn",
]

[tool.uv]
package = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project.urls]
Homepage = "https://gitlab.desy.de/itsaklid/sysvar"
Documentation = "https://gitlab.desy.de/itsaklid/sysvar"
# Source =
# Changelog =
# Tracker =
# Conda-Forge =
# Download =
# Twitter =
# Change if running only on Windows, Mac or Linux (comma-separated)
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/

[project.optional-dependencies]
# This is for optional requirements we want our users to have.
# For optional requirements used for development, see [dependency-groups]
# Add here additional requirements for extra features, to install with:
# `pip install SysVar[PDF]` like:
# PDF = ReportLab; RXP

[dependency-groups]
# Optional dependencies for local development, testing, docs, etc
test = [
    "setuptools",
    "pytest",
    "pytest-cov",
    "pytest-xdist[psutil]",
]
dev = [
    "pre-commit",
    "tox",
    "nbdime",
    "nbstripout",
    "pytest",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "sphinx",
    "recommonmark",
]
docs = [
    "sphinx",
    "recommonmark",
    "sphinx_rtd_theme",
    "myst-parser",
]

[tool.pytest.ini_options]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
# Comment those flags to avoid this pytest issue.
addopts = """
--cov=sysvar
--cov-report=term-missing
--cov-report=xml
--junitxml=report.xml
--verbose
-n auto"""
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
testpaths = ["tests"]
# Use pytest markers to select/deselect specific tests
# markers =
# slow: mark tests as slow (deselect with '-m "not slow"')
# system: mark end-to-end system tests

[tool.devpi.upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = "1"
formats = "bdist_wheel"

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = "88"
extend_ignore = "E203, W503"
# ^  Black-compatible
# E203 and W503 have edge cases handled by black
exclude = """
.tox
build
dist
.eggs
docs/conf.py"""